--- a/src/components/navigation/navigation.scss
+++ b/src/components/navigation/navigation.scss
@@ -1,7 +1,7 @@
 .nav {
   width: 100%;
   height: 10em;
-  padding-block: 1em;
+  padding-top: 1em;
   display: flex;
   flex-direction: column;
   background: brown;
